discussion/kv_engine/173095/173095_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Ensure reset() resets all of EPStats' stats

Previously, not all stats were reset by calls to
EPStats::reset. Add the missing stats to the
call.

Additionally, enable initialization and reset tests
for the missing stats.

Change-Id: I7687456e697031f3a071252c05edcdc92770f056

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 15:01:10.000000000
Message: 
Patch Set 17: Patch Set 16 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 15:25:57.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45086/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc(68): error C2039: "setLabel": is not a member of "Monotonic<int64_t,ThrowExceptionPolicy,0x0,BasicNameLabelPolicy,cb::greater>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45086/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37874/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:57:17:
error: no member named "setLabel" in "Monotonic<long, DefaultOrderReversedPolicy, nullptr, BasicNameLabelPolicy, cb::greater>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16492/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:44:1: error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
static_assert(sizeof(EPStats) == 1640,
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16492/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:44:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26674/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18264/ : FAILURE

Compile error at [2022-04-07T15:23:39.069Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/stats.cc:44:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18264/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18600/ : FAILURE

Compile error at [2022-04-07T15:23:29.313Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/stats.cc:44:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18600/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19295/ : FAILURE

Compile error at [2022-04-07T15:23:06.081Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/stats.cc:44:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6147/ : FAILURE

Compile error at [2022-04-07T15:22:24.349Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/stats.cc:44:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6147/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17360/ : FAILURE

Compile error at [2022-04-07T15:08:42.934Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/stats.cc:44:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17360/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6207/ : FAILURE

Compile error at [2022-04-07T15:16:59.158Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/stats.cc:44:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15427/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
